@@ -1,3 +1,4 @@
+// src/main/java/com/coachpad/persistence/adapter/FormationAdapter.java
 package com.coachpad.persistence.adapter;
 
 import com.coachpad.mapper.FormationMapper;
@@ -8,7 +9,6 @@ import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Component;
 
 import java.util.List;
-import java.util.stream.Collectors;
 import java.util.Optional;
 
 @Component
@@ -16,44 +16,30 @@ import java.util.Optional;
 public class FormationAdapter {
 
     private final FormationRepository formationRepository;
+    private final FormationMapper mapper; 
 
-    /**
-     * Récupère toutes les formations
-     */
     public List<FormationModel> findAll() {
         return formationRepository.findAll()
                 .stream()
-                .map(FormationMapper::toModel)
-                .collect(Collectors.toList());
+                .map(mapper::toModel)
+                .toList();
     }
 
-    /**
-     * Récupère une formation par ID
-     */
     public Optional<FormationModel> findById(Long id) {
         return formationRepository.findById(id)
-                .map(FormationMapper::toModel);
+                .map(mapper::toModel);
     }
 
-    /**
-     * Sauvegarde ou met à jour une formation
-     */
     public FormationModel save(FormationModel model) {
-        FormationEntity entity = FormationMapper.toEntity(model);
+        FormationEntity entity = mapper.toEntity(model);
         FormationEntity saved = formationRepository.save(entity);
-        return FormationMapper.toModel(saved);
+        return mapper.toModel(saved);
     }
 
-    /**
-     * Supprime une formation par ID
-     */
     public void deleteById(Long id) {
         formationRepository.deleteById(id);
     }
 
-    /**
-     * Vérifie si une formation existe
-     */
     public boolean existsById(Long id) {
         return formationRepository.existsById(id);
     }
